--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Web_View"></activity>
+        <activity android:name=".Web_View">
+
+        </activity>
         <activity android:name=".Setting" />
         <activity android:name=".MainActivity">
             <intent-filter>
